style(Icon): fix badge number align

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -419,7 +419,7 @@
 @info-background-color: @red;
 @info-dot-color: @red;
 @info-dot-size: 8px;
-@info-font-family: @price-integer-font-family;
+@info-font-family: -apple-system-font, Helvetica Neue, Arial, sans-serif;
 
 // Image
 @image-placeholder-text-color: @gray-6;
